# greenNovation

./: .env  .gitignore  README.md  README_NEW.md  WELLBEING_CODE_SNIPPETS.md  WELLBEING_IMPLEMENTATION_GUIDE.md  WELLBEING_QUICK_GUIDE.md  package-lock.json  populate_data.py  pyproject.toml  requirements.txt  show_data.py  test.py
ai/agents/energy/: agent.py  metrics.py
ai/agents/learning/: agent.py
ai/agents/orchestrator/: adapters.py  agent.py  context_builder.py  graph.py  merge.py  policies.py  test_orchestrator.py
ai/agents/planner/: agent.py
ai/agents/profile/: features.py  llm_inference.py  node.py  prompt.py  schema.py  test_profile_inference.py
ai/agents/rag/: agent.py
ai/agents/readiness/: agent.py  rules.py  schemas.py  scoring.py
ai/graph/: __init__.py  learning_workflow.py
ai/state/: agent_context.py
ai/test/: test_learning_agent.py  test_readiness.py
api/: __init__.py  main.py
backend/: __init__.py
backend/app/: config.py  main.py
backend/app/db/: __init__.py
backend/app/schemas/: __init__.py  chat.py  forest.py  project.py  readiness.py
backend/app/services/: __init__.py  ai_service.py  corpus_service.py  forest_service.py  projects_service.py  readiness_dashboard_service.py  readiness_service.py  session_service.py
data/: index.faiss  index.pkl
frontend/: bun.lockb  package-lock.json  package.json  vite.config.ts
frontend/public/: panda-breathing.webm
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: AppLayout.tsx  AvatarTip.tsx  BreathingBreak.tsx  DailyReward.tsx  FloatingBamboo.tsx  (+9 more)
(+31 files in other folders)
