[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greennovation"
version = "0.1.0"
description = "AI-powered student support platform (greenNovation)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typing_extensions>=4.0",
    "langgraph>=0.2.55",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "api*"]

[tool.pytest.ini_options]
testpaths = ["ai/test"]
pythonpath = ["."]
